--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -181,6 +181,7 @@
     <ClCompile Include="..\..\..\..\src\wallet\message.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\mnemonic.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\payment_address.cpp" />
+    <ClCompile Include="..\..\..\..\src\wallet\qrcode.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\select_outputs.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\stealth_address.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\uri.cpp" />
@@ -302,6 +303,7 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\ek_private.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\ek_public.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\ek_token.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\qrcode.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\settings.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\uri_reader.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\encrypted_keys.hpp" />
