--- a/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj.filters
+++ b/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj.filters
@@ -273,5 +273,8 @@
     <ClCompile Include="..\..\..\..\test\wallet\qrcode.cpp">
       <Filter>src\wallet</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\test\config\base58.cpp">
+      <Filter>src\config</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
