--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -83,6 +83,12 @@
     <ClCompile Include="..\..\..\..\src\chain\input.cpp" />
     <ClCompile Include="..\..\..\..\src\chain\output.cpp" />
     <ClCompile Include="..\..\..\..\src\config\authority.cpp" />
+    <ClCompile Include="..\..\..\..\src\config\base16.cpp" />
+    <ClCompile Include="..\..\..\..\src\config\base2.cpp" />
+    <ClCompile Include="..\..\..\..\src\config\base58.cpp" />
+    <ClCompile Include="..\..\..\..\src\config\base64.cpp" />
+    <ClCompile Include="..\..\..\..\src\config\base85.cpp" />
+    <ClCompile Include="..\..\..\..\src\config\btc160.cpp" />
     <ClCompile Include="..\..\..\..\src\config\btc256.cpp" />
     <ClCompile Include="..\..\..\..\src\config\checkpoint.cpp" />
     <ClCompile Include="..\..\..\..\src\config\directory.cpp" />
@@ -205,6 +211,12 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\compat.h" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\compat.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\authority.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\base16.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\base2.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\base58.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\base64.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\base85.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\btc160.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\btc256.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\checkpoint.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\directory.hpp" />
