--- a/Makefile.am
+++ b/Makefile.am
@@ -65,11 +65,11 @@ src_libbitcoin_la_SOURCES = \
     src/config/parameter.cpp \
     src/config/parser.cpp \
     src/config/printer.cpp \
-    src/formats/base10.cpp \
-    src/formats/base16.cpp \
-    src/formats/base58.cpp \
-    src/formats/base64.cpp \
-    src/formats/base85.cpp \
+    src/formats/base_10.cpp \
+    src/formats/base_16.cpp \
+    src/formats/base_58.cpp \
+    src/formats/base_64.cpp \
+    src/formats/base_85.cpp \
     src/math/checksum.cpp \
     src/math/crypto.cpp \
     src/math/elliptic_curve.cpp \
@@ -222,11 +222,11 @@ test_libbitcoin_test_SOURCES = \
     test/config/endpoint.cpp \
     test/config/parameter.cpp \
     test/config/printer.cpp \
-    test/formats/base10.cpp \
-    test/formats/base16.cpp \
-    test/formats/base58.cpp \
-    test/formats/base64.cpp \
-    test/formats/base85.cpp \
+    test/formats/base_10.cpp \
+    test/formats/base_16.cpp \
+    test/formats/base_58.cpp \
+    test/formats/base_64.cpp \
+    test/formats/base_85.cpp \
     test/math/big_number.cpp \
     test/math/big_number.hpp \
     test/math/checksum.cpp \
@@ -345,16 +345,16 @@ include_bitcoin_bitcoin_config_HEADERS = \
 
 include_bitcoin_bitcoin_formatsdir = ${includedir}/bitcoin/bitcoin/formats
 include_bitcoin_bitcoin_formats_HEADERS = \
-    include/bitcoin/bitcoin/formats/base10.hpp \
-    include/bitcoin/bitcoin/formats/base16.hpp \
-    include/bitcoin/bitcoin/formats/base58.hpp \
-    include/bitcoin/bitcoin/formats/base64.hpp \
-    include/bitcoin/bitcoin/formats/base85.hpp
+    include/bitcoin/bitcoin/formats/base_10.hpp \
+    include/bitcoin/bitcoin/formats/base_16.hpp \
+    include/bitcoin/bitcoin/formats/base_58.hpp \
+    include/bitcoin/bitcoin/formats/base_64.hpp \
+    include/bitcoin/bitcoin/formats/base_85.hpp
 
 include_bitcoin_bitcoin_impl_formatsdir = ${includedir}/bitcoin/bitcoin/impl/formats
 include_bitcoin_bitcoin_impl_formats_HEADERS = \
-    include/bitcoin/bitcoin/impl/formats/base16.ipp \
-    include/bitcoin/bitcoin/impl/formats/base58.ipp
+    include/bitcoin/bitcoin/impl/formats/base_16.ipp \
+    include/bitcoin/bitcoin/impl/formats/base_58.ipp
 
 include_bitcoin_bitcoin_impl_mathdir = ${includedir}/bitcoin/bitcoin/impl/math
 include_bitcoin_bitcoin_impl_math_HEADERS = \
