--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -98,11 +98,11 @@
     <ClCompile Include="..\..\..\..\src\config\printer.cpp" />
     <ClCompile Include="..\..\..\..\src\constants.cpp" />
     <ClCompile Include="..\..\..\..\src\error.cpp" />
-    <ClCompile Include="..\..\..\..\src\formats\base10.cpp" />
-    <ClCompile Include="..\..\..\..\src\formats\base16.cpp" />
-    <ClCompile Include="..\..\..\..\src\formats\base58.cpp" />
-    <ClCompile Include="..\..\..\..\src\formats\base64.cpp" />
-    <ClCompile Include="..\..\..\..\src\formats\base85.cpp" />
+    <ClCompile Include="..\..\..\..\src\formats\base_10.cpp" />
+    <ClCompile Include="..\..\..\..\src\formats\base_16.cpp" />
+    <ClCompile Include="..\..\..\..\src\formats\base_58.cpp" />
+    <ClCompile Include="..\..\..\..\src\formats\base_64.cpp" />
+    <ClCompile Include="..\..\..\..\src\formats\base_85.cpp" />
     <ClCompile Include="..\..\..\..\src\math\checksum.cpp" />
     <ClCompile Include="..\..\..\..\src\math\crypto.cpp" />
     <ClCompile Include="..\..\..\..\src\math\elliptic_curve.cpp" />
@@ -227,11 +227,11 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\constants.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\define.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\error.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\formats\base10.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\formats\base16.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\formats\base58.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\formats\base64.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\formats\base85.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\formats\base_10.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\formats\base_16.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\formats\base_58.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\formats\base_64.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\formats\base_85.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\handlers.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\checksum.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\crypto.hpp" />
@@ -357,8 +357,8 @@
     <ClInclude Include="..\..\resource.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\formats\base16.ipp" />
-    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\formats\base58.ipp" />
+    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\formats\base_16.ipp" />
+    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\formats\base_58.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\math\checksum.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\math\hash.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\array_slice.ipp" />
