--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -87,9 +87,9 @@
     <ClCompile Include="..\..\..\..\src\config\base2.cpp" />
     <ClCompile Include="..\..\..\..\src\config\base58.cpp" />
     <ClCompile Include="..\..\..\..\src\config\base64.cpp" />
-    <ClCompile Include="..\..\..\..\src\config\base85.cpp" />
-    <ClCompile Include="..\..\..\..\src\config\btc160.cpp" />
-    <ClCompile Include="..\..\..\..\src\config\btc256.cpp" />
+    <ClCompile Include="..\..\..\..\src\config\sodium.cpp" />
+    <ClCompile Include="..\..\..\..\src\config\hash160.cpp" />
+    <ClCompile Include="..\..\..\..\src\config\hash256.cpp" />
     <ClCompile Include="..\..\..\..\src\config\checkpoint.cpp" />
     <ClCompile Include="..\..\..\..\src\config\directory.cpp" />
     <ClCompile Include="..\..\..\..\src\config\endpoint.cpp" />
@@ -215,9 +215,9 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\base2.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\base58.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\base64.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\base85.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\btc160.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\btc256.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\sodium.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\hash160.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\hash256.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\checkpoint.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\directory.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\endpoint.hpp" />
